--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
     "express": "^4.18.2",
+    "firebase": "^10.8.1",
     "modern-normalize": "^2.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
