--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
-    "@twogate/ngx-photo-gallery": "^1.7.0",
+    "@types/photoswipe": "^4.1.6",
     "express": "^4.18.2",
     "firebase": "^10.8.1",
     "modern-normalize": "^2.0.0",
+    "photoswipe": "^5.4.4",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "rxjs": "~7.8.0",
